; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux.c_mark_stream_eof.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux.c_mark_stream_eof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demux_stream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.demux_stream*)* @mark_stream_eof to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mark_stream_eof(%struct.demux_stream* %0) #0 {
  %2 = alloca %struct.demux_stream*, align 8
  store %struct.demux_stream* %0, %struct.demux_stream** %2, align 8
  %3 = load %struct.demux_stream*, %struct.demux_stream** %2, align 8
  %4 = getelementptr inbounds %struct.demux_stream, %struct.demux_stream* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %16, label %7

7:                                                ; preds = %1
  %8 = load %struct.demux_stream*, %struct.demux_stream** %2, align 8
  %9 = getelementptr inbounds %struct.demux_stream, %struct.demux_stream* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.demux_stream*, %struct.demux_stream** %2, align 8
  %11 = call i32 @adjust_seek_range_on_packet(%struct.demux_stream* %10, i32* null)
  %12 = load %struct.demux_stream*, %struct.demux_stream** %2, align 8
  %13 = call i32 @back_demux_see_packets(%struct.demux_stream* %12)
  %14 = load %struct.demux_stream*, %struct.demux_stream** %2, align 8
  %15 = call i32 @wakeup_ds(%struct.demux_stream* %14)
  br label %16

16:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @adjust_seek_range_on_packet(%struct.demux_stream*, i32*) #1

declare dso_local i32 @back_demux_see_packets(%struct.demux_stream*) #1

declare dso_local i32 @wakeup_ds(%struct.demux_stream*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
